--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
         "@babel/compat-data": "7.8.0",
         "@ionic-native/core": "^5.0.0",
         "@ionic-native/google-plus": "^5.23.0",
+        "@ionic-native/native-storage": "^5.23.0",
         "@ionic-native/splash-screen": "^5.0.0",
         "@ionic-native/status-bar": "^5.0.0",
         "@ionic/angular": "^5.0.0",
         "cordova-android": "^8.1.0",
         "cordova-plugin-googleplus": "^5.2.1",
+        "cordova-plugin-nativestorage": "^2.3.2",
         "core-js": "^2.5.4",
         "firebase": "^7.13.1",
         "rxjs": "~6.5.1",
@@ -77,7 +79,8 @@
             "cordova-plugin-googleplus": {
                 "REVERSED_CLIENT_ID": "com.googleusercontent.apps.406013327564-stjvnd7fp3qjb9qml78t4nt2knpa0bac",
                 "WEB_APPLICATION_CLIENT_ID": "406013327564-mk437resim441qmpv4tulht3jjnidmej.apps.googleusercontent.com"
-            }
+            },
+            "cordova-plugin-nativestorage": {}
         },
         "platforms": [
             "android"
