--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "@angular/platform-browser-dynamic": "~8.2.14",
         "@angular/router": "~8.2.14",
         "@babel/compat-data": "7.8.0",
+        "@ionic-native/barcode-scanner": "^5.23.0",
         "@ionic-native/core": "^5.0.0",
         "@ionic-native/google-plus": "^5.23.0",
         "@ionic-native/native-storage": "^5.23.0",
@@ -28,10 +29,13 @@
         "@ionic-native/status-bar": "^5.0.0",
         "@ionic/angular": "^5.0.0",
         "cordova-android": "^8.1.0",
+        "cordova-plugin-androidx": "^1.0.2",
+        "cordova-plugin-androidx-adapter": "^1.1.0",
         "cordova-plugin-googleplus": "^5.2.1",
         "cordova-plugin-nativestorage": "^2.3.2",
         "core-js": "^2.5.4",
         "firebase": "^7.13.1",
+        "phonegap-plugin-barcodescanner": "^8.1.0",
         "rxjs": "~6.5.1",
         "tslib": "^1.9.0",
         "zone.js": "~0.9.1"
@@ -80,7 +84,12 @@
                 "REVERSED_CLIENT_ID": "com.googleusercontent.apps.406013327564-stjvnd7fp3qjb9qml78t4nt2knpa0bac",
                 "WEB_APPLICATION_CLIENT_ID": "406013327564-mk437resim441qmpv4tulht3jjnidmej.apps.googleusercontent.com"
             },
-            "cordova-plugin-nativestorage": {}
+            "cordova-plugin-nativestorage": {},
+            "phonegap-plugin-barcodescanner": {
+                "ANDROID_SUPPORT_V4_VERSION": "27.+"
+            },
+            "cordova-plugin-androidx": {},
+            "cordova-plugin-androidx-adapter": {}
         },
         "platforms": [
             "android"
