--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "cordova-plugin-nativestorage": "^2.3.2",
         "core-js": "^2.5.4",
         "firebase": "^7.13.1",
+        "ngx-qrcode2": "0.0.9",
         "phonegap-plugin-barcodescanner": "^8.1.0",
         "rxjs": "~6.5.1",
         "tslib": "^1.9.0",
