--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@angular/router": "~8.2.14",
         "@babel/compat-data": "7.8.0",
         "@ionic-native/barcode-scanner": "^5.23.0",
+        "@ionic-native/ble": "^4.20.0",
         "@ionic-native/core": "^5.0.0",
         "@ionic-native/google-plus": "^5.23.0",
         "@ionic-native/native-storage": "^5.23.0",
@@ -31,6 +32,7 @@
         "cordova-android": "^8.1.0",
         "cordova-plugin-androidx": "^1.0.2",
         "cordova-plugin-androidx-adapter": "^1.1.0",
+        "cordova-plugin-ble-central": "^1.2.4",
         "cordova-plugin-googleplus": "^5.2.1",
         "cordova-plugin-nativestorage": "^2.3.2",
         "core-js": "^2.5.4",
@@ -38,6 +40,7 @@
         "ngx-qrcode2": "0.0.9",
         "phonegap-plugin-barcodescanner": "^8.1.0",
         "rxjs": "~6.5.1",
+        "rxjs-compat": "^6.5.4",
         "tslib": "^1.9.0",
         "zone.js": "~0.9.1"
     },
@@ -90,7 +93,8 @@
                 "ANDROID_SUPPORT_V4_VERSION": "27.+"
             },
             "cordova-plugin-androidx": {},
-            "cordova-plugin-androidx-adapter": {}
+            "cordova-plugin-androidx-adapter": {},
+            "cordova-plugin-ble-central": {}
         },
         "platforms": [
             "android"
