--- a/package.json
+++ b/package.json
@@ -22,8 +22,6 @@
         "@angular/router": "~8.2.14",
         "@babel/compat-data": "7.8.0",
         "@ionic-native/barcode-scanner": "^5.23.0",
-        "@ionic-native/ble": "^4.20.0",
-        "@ionic-native/bluetooth-le": "^5.23.0",
         "@ionic-native/core": "^5.0.0",
         "@ionic-native/google-plus": "^5.23.0",
         "@ionic-native/native-storage": "^5.23.0",
@@ -33,7 +31,7 @@
         "cordova-android": "^8.1.0",
         "cordova-plugin-androidx": "^1.0.2",
         "cordova-plugin-androidx-adapter": "^1.1.0",
-        "cordova-plugin-bluetoothle": "^4.5.9",
+        "cordova-plugin-ble-central": "^1.2.4",
         "cordova-plugin-googleplus": "^5.2.1",
         "cordova-plugin-nativestorage": "^2.3.2",
         "core-js": "^2.5.4",
@@ -95,7 +93,8 @@
             },
             "cordova-plugin-androidx": {},
             "cordova-plugin-androidx-adapter": {},
-            "cordova-plugin-bluetoothle": {}
+            "cordova-plugin-bluetoothle": {},
+            "cordova-plugin-ble-central": {}
         },
         "platforms": [
             "android"
