--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
         "@angular/router": "~8.2.14",
         "@babel/compat-data": "7.8.0",
         "@ionic-native/barcode-scanner": "^5.23.0",
+        "@ionic-native/ble": "^5.24.0",
         "@ionic-native/core": "^5.0.0",
+        "@ionic-native/geolocation": "^5.24.0",
         "@ionic-native/google-plus": "^5.23.0",
+        "@ionic-native/native-geocoder": "^5.24.0",
         "@ionic-native/native-storage": "^5.23.0",
         "@ionic-native/splash-screen": "^5.0.0",
         "@ionic-native/status-bar": "^5.0.0",
@@ -32,7 +35,9 @@
         "cordova-plugin-androidx": "^1.0.2",
         "cordova-plugin-androidx-adapter": "^1.1.0",
         "cordova-plugin-ble-central": "^1.2.4",
+        "cordova-plugin-geolocation": "^4.0.2",
         "cordova-plugin-googleplus": "^5.2.1",
+        "cordova-plugin-nativegeocoder": "^3.4.0",
         "cordova-plugin-nativestorage": "^2.3.2",
         "core-js": "^2.5.4",
         "firebase": "^7.13.1",
@@ -94,7 +99,9 @@
             "cordova-plugin-androidx": {},
             "cordova-plugin-androidx-adapter": {},
             "cordova-plugin-bluetoothle": {},
-            "cordova-plugin-ble-central": {}
+            "cordova-plugin-ble-central": {},
+            "cordova-plugin-geolocation": {},
+            "cordova-plugin-nativegeocoder": {}
         },
         "platforms": [
             "android"
